<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ArmS</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_sms_receiver">SmsReceiver</string>
    <string name="Text">Enter New Password</string>
    <string name="hint">"Ether 4 characters "</string>
    <string name="hint2">Confirm password</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="button">Set password</string>
    <string name="title_activity_message_receive">MessageReceive</string>
    <string name="title_activity_fetch_contact_number">FetchContactNumber</string>

</resources>